[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sounds/pickup_item.wav" type="AudioStream" id=1]
[ext_resource path="res://words/WriteButton.gd" type="Script" id=2]
[ext_resource path="res://assets/art/button/button.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/NewTegomin-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1500, 0, 300, 300 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18.4962, 28.9402 )

[sub_resource type="DynamicFont" id=9]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 250, 10 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 250, 20 )

[node name="WriteButton" type="Node2D"]
script = ExtResource( 2 )
camera_offset = Vector2( 0, 0 )

[node name="Button" type="Area2D" parent="."]
position = Vector2( -7.13526, -123.677 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 16
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Button"]
position = Vector2( 3.50001, -60.3977 )
frames = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button"]
position = Vector2( -16.2178, -0.395594 )
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Audio" type="AudioStreamPlayer2D" parent="Button"]
stream = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HTTPTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="PromptLabel" type="Label" parent="."]
margin_right = 500.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 9 )
text = "Test Provocation..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2( 250, 0 )
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="Platform"]
offset = Vector2( 0, -500 )
zoom = Vector2( 2, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource( 10 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2( 250, 0 )
collision_layer = 128
collision_mask = 64
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="area_entered" from="Button" to="." method="_on_Button_area_entered"]
[connection signal="animation_finished" from="Button/AnimatedSprite" to="." method="_on_Button_animation_finished"]
[connection signal="timeout" from="HTTPTimer" to="." method="_on_HTTPTimer_timeout"]
[connection signal="body_entered" from="ExitArea" to="." method="_on_ExitArea_bodyentered"]
